# playwriteDemoProject

./: Cargo.toml  README.md
.claude/: settings.local.json
config/: local.toml  messenger.toml  production.toml
examples/: simple_chat.rs
src/: app.rs  lib.rs  main.rs
src/crypto/: identity.rs  mod.rs  prekeys.rs  simple_prekeys.rs
src/network/: discovery.rs  mod.rs
src/session/: manager.rs  mod.rs  simple_manager.rs  x3dh.rs
src/transport/: mod.rs  p2p.rs  protocol.rs  simple.rs
src/utils/: config.rs  errors.rs  mod.rs
