[package]
name = "secure-p2p-messenger"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure peer-to-peer messenger using Double Ratchet and X3DH protocols"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/secure-p2p-messenger"
keywords = ["p2p", "messaging", "cryptography", "double-ratchet", "x3dh"]
categories = ["cryptography", "network-programming"]

[[bin]]
name = "messenger"
path = "src/main.rs"

[lib]
name = "secure_p2p_messenger"
path = "src/lib.rs"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
curve25519-dalek = "4.1"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }

# Networking & P2P
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux", 
    "gossipsub",
    "mdns",
    "kad",
    "relay",
    "dcutr",
    "identify",
    "ping",
    "autonat",
    "upnp",
    "macros"
] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
toml = "0.8"
bincode = "1.3"

# CLI & Logging
clap = { version = "4.4", features = ["derive", "color"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0